--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,9 +2,13 @@
 
 <!-- this creates a google map on the page with the given lat/lng from -->
 <!-- the component as the initial center of the map: -->
-<agm-map [latitude]="lat" [longitude]="lng">
-  <agm-marker [latitude]="lat" [longitude]="lng"></agm-marker>
-  <!-- <agm-circle [latitude]="lat" [longitude]="lng"></agm-circle> -->
-  <agm-circle [latitude]="lat + 0.3" [longitude]="lng" [radius]="10000" [fillColor]="'green'" [circleDraggable]="true" [editable]="true">
-  </agm-circle>
+<agm-map (mapClick)="mapClicked($event)" [zoom]="zoom" [disableDefaultUI]="false" [latitude]="lat" [longitude]="lng" [zoomControl]="false">
+    <agm-marker *ngFor="let m of markers;let i = index" (markerClick)="clickedMarker(m.label, i)" [markerDraggable]="m.draggable" [label]="m.label" [latitude]="m.lat" [longitude]="m.lng">
+        <agm-info-window>
+            <strong>InfoWindow content</strong>
+        </agm-info-window>
+    </agm-marker>
+    <!-- <agm-circle [latitude]="lat" [longitude]="lng"></agm-circle> -->
+    <agm-circle [latitude]="lat + 0.3" [longitude]="lng" [strokeWeight]="2" [radius]="10000" [fillColor]="'green'" [circleDraggable]="false" [editable]="true">
+    </agm-circle>
 </agm-map>
